[package]
name = "thesillyengine"
version = "0.1.0"
edition = "2021"

[dependencies]
egui_glium = "0.26.3"
egui = { version = "0.26.2", default-features = false, features = [
  "bytemuck",
  "default_fonts"
] }
egui-winit = { version = "0.26.2", default-features = false }
ahash = { version = "0.8.1", default-features = false, features = [
  "no-rng", # we don't need DOS-protection, so we let users opt-in to it instead
  "std",
] }
bytemuck = "1.7"
glium = "0.34"
winit = "0.29"
log = "0.4.21"
egui_demo_lib = "0.26.2"
